# takeout-metadata

./: .gitignore  Cargo.toml  LICENSE  README.md  takeout-metadata
.github/workflows/: publish.yml
src/: cli.rs  main.rs
