[package]
name = "takeout-metadata"
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aimericsr/takeout-metadata"
homepage = "https://github.com/aimericsr/takeout-metadata"
description = "CLI app for getting the good metadata out of a Google Takeout export"
categories = ["command-line-utilities","multimedia::images", "filesystem", "parsing"]
keywords = ["google-takeout", "export"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"